componenten naar eigen project

--- a/ValidatiePOC/ValidatiePOC.csproj
+++ b/ValidatiePOC/ValidatiePOC.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlazorCore\BlazorCore.csproj" />
     <ProjectReference Include="..\SharedModels\SharedModels.csproj" />
   </ItemGroup>
 
