--- a/ValidatiePOC/ValidatiePOC.csproj
+++ b/ValidatiePOC/ValidatiePOC.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Accelist.FluentValidation.Blazor" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
